# Assignment-CPSAT

./: Dockerfile  README.md  pyproject.toml  railway.toml
examples/: sample_input.json
src/assignment/: __init__.py  main.py  models.py  solver.py
